# sumo3Dviz

./: .gitignore  .pylintrc  README.md  TODO.txt  pyproject.toml  requirements.txt
.github/scripts/: test_cinematic.py  test_cli.py  test_demos.py  test_eulerian.py  test_interactive.py  test_lagrangian.py
.github/workflows/: build.yml  lint.yml  release.yml  test_rendering.yml
cli/: config_template.yaml  render_cli.py
code/: render_video.py  tools_interactive.py  tools_loader.py  tools_rendering.py  tools_trajectory.py
data/: sources.txt
examples/: __init__.py  config_barcelona.yaml  config_ci.yaml  config_template.yaml  demo_cinematic.py  demo_eulerian.py  demo_interactive.py  demo_lagrangian.py  demo_walkaround.py  render_barcelona.py
examples/barcelona_simulation/: Configuration.sumocfg  Demand.rou.xml  Network.net.xml  Network_2Sided.net.xml  RunSimulation_ALINEA_45.py  RunSimulation_ALINEA_60.py  RunSimulation_NoControl.py  Sensors.add.xml  Sensors_withlog.add.xml  edge_logging.xml  tls_logging.add.xml
examples/barcelona_simulation/logs/: TripInfos.xml  e1_182.xml  log_edges.xml
resources/: Figure_Banner.pptx
results/: barcelona_simulation.avi
src/examples/: config_barcelona.yaml  config_template.yaml  render_barcelona.py  render_barcelona_cli.py  render_barcelona_win.py
src/legacy/: render_video.py  tools_interactive.py  tools_rendering.py
src/sumo3Dviz/: __init__.py
src/sumo3Dviz/cli/: __init__.py  render_cli.py  (+2 more)
src/tools/: __init__.py  interaction_tools.py  loader_tools.py  rendering_tools.py  simulation_tools.py  trajectory_tools.py
(+777 files in other folders)
